Fixed the nav bar space gap in 'Resume' page

--- a/css/main.css
+++ b/css/main.css
@@ -56,7 +56,7 @@ footer p{
 .right-nav {
     align-items: center;
     justify-content: flex-end;
-    width: 80%;
+    width: 81%;
 }
 
 .right-nav a {
@@ -98,10 +98,13 @@ footer p{
     top: 25%;
     left: 25%;
     width: 50%;
-    height: 10%;
+    height: 12%;
 }
 
 .img-container > .img-title-header > h1 {
+    font-family: 'Bebas Nue', cursive;
+    font-size: 50px;
+    margin: 2px;
     text-align: center;
 }
 
@@ -285,11 +288,15 @@ footer p{
         display: none;
     }
 
+    .img-container > .img-title-header > h1 {
+        font-size: 2rem;
+    }
+
     /* ---------------------Middle Section---------------------------- */
 
     .about-me-box {
         /* background-color: black; */
-        width: 100%;
+        width: 80%;
         height: 10rem;
     }
 
