--- a/css/styles.css
+++ b/css/styles.css
@@ -111,7 +111,7 @@ header {
 .right-nav-list {
     display: flex;
     justify-content: space-evenly;
-    width: 80%;
+    width: 60%;
 }
 
 /* Header IMG */
